ftp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ftp-http-ingress
spec:
  backend:
    serviceName: ftp-http-service
    servicePort: 21
